[project]
name = "mnemos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
]
