[project]
name = "mnemos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.154.0",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-otlp>=1.22.0",
]

[project.scripts]
start-api = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
start-ui = "streamlit run streamlit_app.py --server.port 8501"
